<resources>
    <string name="app_name">PopularMovies</string>
    <string name="error_message">An error has occurred while getting Data. Please try again</string>

    <!-- String Constants for MainActivity.java -->
    <string name="SORT_BY_POPULAR">popular</string>
    <string name="SORT_BY_RATING">top_rated</string>

    <!-- String Constants for MoviesDBJsonUtils.java -->
    <string name="JSON_PAGE">page</string>
    <string name="JSON_RESULTS">results</string>
    <string name="JSON_TOTAL_RESULTS">total_results</string>
    <string name="JSON_TOTAL_PAGES">total_pages</string>
    <string name="JSON_ID">id</string>
    <string name="JSON_ORIGINAL_TITLE">original_title</string>
    <string name="JSON_POSTER_PATH">poster_path</string>
    <string name="JSON_OVERVIEW">overview</string>
    <string name="JSON_RELEASE_DATE">release_date</string>
    <string name="JSON_VOTE_AVERAGE">vote_average</string>
    <string name="JSON_POPULARITY">popularity</string>
    <string name="JSON_BACKDROP_PATH">backdrop_path</string>

    <!-- String Constants for extractiong TrailerList in MoviesDBJsonUtils.java -->
    <string name="JSON_FIELD_TYPE">type</string>
    <string name="JSON_FIELD_TRAILER">Trailer</string>
    <string name="JSON_FIELD_KEY">key</string>


    <!-- String Constants for NetworkUtils.java -->
    <string name="THE_MOVIE_DATABASE_API">http://api.themoviedb.org/3/</string>
    <string name="MOVIE">movie</string>
    <string name="BASE_IMAGE_URL">http://image.tmdb.org/t/p/</string>
    <string name="IMAGE_SIZE_DEFAULT">w185</string>
    <string name="VIDEOS">videos</string>

    <!-- String Constants for NetworkUtils.java : API_DETAILS-->
    <string name="API_KEY_PARAM">api_key</string>
    <string name="API_KEY">YOUR_API_KEY</string>

    <!-- String Constants for Layout:activity_movie_details.xml-->
    <string name="RELEASE_DATE">RELEASE DATE</string>
    <string name="COLON">:</string>
    <string name="USER_RATING">USER RATING</string>
    <string name="POPULARITY">POPULARITY RATING</string>
    <string name="SYNOPSIS">SYNOPSIS</string>
    <string name="TRAILERS">TRAILERS</string>

    <!-- String Constants for Menu - settings -->
    <string name="menu_settings">Settings</string>

    <!-- String Constants for List preferences Labels-->
    <string name="pref_sortby_popular_label">Popular</string>
    <string name="pref_sortby_rating_label">Rating</string>
    <string name="pref_sortby_favorites_label">Favorites</string>

    <string name="pref_sortby_label">Sort By</string>
    <string name="pref_sortby_key" translatable="false">sortby</string>


    <!-- String Constants for List preferences values to store in array-->
    <string name="pref_sortby_popular_value" translatable="false">popular</string>
    <string name="pref_sortby_rating_value" translatable="false">top_rated</string>
    <string name="pref_sortby_favorites_value" translatable="false">favorites</string>

</resources>
