<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background_blue"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movie_title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:id="@+id/movie_backdrop"
        android:scaleType="fitCenter" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_movie_details"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:columnCount="3"
        android:layout_weight="1"
        android:columnOrderPreserved="true"
        android:layout_marginRight="6dp"
        android:rowCount="3"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:background="@color/background_blue"
        tools:context="com.android.udacity.dinesh.popularmovies.MovieDetailsActivity">


        <TextView
            android:text="@string/RELEASE_DATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="18sp"
            android:id="@+id/movie_release_date_label"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:text="@string/COLON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="18sp"
            android:id="@+id/textViewColon1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="18sp"
            android:id="@+id/movie_release_date" />

        <TextView
            android:text="@string/USER_RATING"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="18sp"
            android:id="@+id/movie_vote_average_label"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/COLON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="18sp"
            android:id="@+id/textViewColon2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="18sp"
            android:id="@+id/movie_vote_average" />

        <TextView
            android:text="@string/POPULARITY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="18sp"
            android:id="@+id/movie_popularity_label"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/COLON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="18sp"
            android:id="@+id/textViewColon3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="18sp"
            android:id="@+id/movie_popularity" />

    </GridLayout>

    <TextView
        android:text="@string/SYNOPSIS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/movie_synopsis_label"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:id="@+id/movie_synopsis"
        android:gravity="fill_horizontal|end"
        android:scrollHorizontally="false"
        android:maxLines="40"
        android:ellipsize="none"/>

    <TextView
        android:id="@+id/movie_trailer_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/TRAILERS"
        />

    <TextView
        android:id="@+id/movie_trailer_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Link to movie trailers"
        />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add to Favorites"
        android:onClick="onClickFavorites"
        />

</LinearLayout>
</ScrollView>
